    to ASCII. Supported encodings are UTF-8, UTF-16BE/LE, UTF-32BE/LE, and
    ISO-8859-1~16. Variations are available with options. See the documentation
    of String#downcase for details. [Feature #10085]

  * String.new(capacity: size) [Feature #12024]

  * String#concat, String#prepend [Feature #12333]
    Now takes multiple arguments.

* Symbol

  * Symbol#casecmp? [Feature #12786]

  * Symbol#match now returns MatchData.  [Bug #11991]

  * Symbol#upcase, Symbol#downcase, Symbol#capitalize, and Symbol#swapcase now
    work for all of Unicode. See the documentation of String#downcase
    for details. [Feature #10085]

* Thread

  * Thread#report_on_exception and Thread.report_on_exception
    [Feature #6647]

* TracePoint

  * TracePoint#callee_id [Feature #12747]

* Warning

  * New module named Warning is introduced.  By default it has only
    one singleton method, named warn.  This makes it possible for
    3rd-party libraries to control the way warnings are handled.
    [Feature #12299]

=== Stdlib updates (outstanding ones only)

* CGI

  * Don't allow , as a separator [Bug #12791]

* CSV

  * Add a liberal_parsing option. [Feature #11839]

* IPAddr

  * IPAddr#== and IPAddr#<=> no longer raise an exception if coercion fails.
    [Bug #12799]

* IRB

  * Binding#irb: Start a REPL session like `binding.pry` at r56624.

* Logger

	* Allow specifying logger parameters in constructor such
	  as level, progname, datetime_format, formatter. [Feature #12224]
	* Add shift_period_suffix option. [Feature #10772]

* Net::HTTP

  * New method: Net::HTTP.post [Feature #12375]

* Net::FTP

  * Support TLS (RFC 4217).
  * Support hash style options for Net::FTP.new.
  * Add a new optional argument pathname to Net::FTP#status.
    Contributed by soleboxy. [GH-1478] [Feature #12965]

* OpenSSL

  * Includes Ruby/OpenSSL 2.0. OpenSSL has been extracted as a Gem and is
    maintained at a separate repository now: https://github.com/ruby/openssl.