@@ -159,6 +159,8 @@ with all sufficient information, see the ChangeLog file or Redmine
   * String#concat, String#prepend [Feature #12333]
     Now takes multiple arguments.
 
+  * String#unpack1 [Feature #12752]
+
 * Symbol
 
   * Symbol#casecmp? [Feature #12786]
